--- a/template/views/login.hbs
+++ b/template/views/login.hbs
@@ -21,6 +21,7 @@
   <button type="submit" class="btn btn-primary btn-block mb-4">login </button>
 
 </form>
+<a href="/forgot" class="btn btn-info">Forgot password</a>
 </div>
 
 
