--- a/template/views/table.hbs
+++ b/template/views/table.hbs
@@ -20,8 +20,8 @@
       <td>{{EMAIL}}</td>
       <td>{{PASSWORD}}</td>
       <td>{{TOKENS}}</td>
-       <td> <a href="/edit/:{{ID}}" class="btn btn-info sm-btn">Update</a></td>
-      <td> <a class="btn btn-danger sm-btn">Delete</a></td>
+       <td> <a href="edit/{{ ID }}" class="btn btn-info sm-btn">Update</a></td>
+      <td> <a href="delete/{{ ID }}" class="btn btn-danger sm-btn">Delete</a></td>
 
     </tr>
   {{/each}}
