--- a/template/views/update.hbs
+++ b/template/views/update.hbs
@@ -1,33 +1,34 @@
 {{>header}}
 <br><br><br>
 <div class="col-lg-4 mx-auto">
-<form action="/update" method="post">
+   {{#each users}}
+<form action="/update/{{ ID }}" method="post">
   <!-- 2 column grid layout with text inputs for the first and last names -->
   <div class="row mb-4">
     <div class="col">
       <div class="form-outline">
-        <input type="text" id="form3Example1" class="form-control" name="firstname"/>
-        <label class="form-label" for="form3Example1">{{FIRSTNAME}}</label>
+        <input type="text" id="form3Example1" class="form-control" name="firstname" value="{{FIRSTNAME}}"/>
+        <label class="form-label" for="form3Example1">firstname</label>
       </div>
     </div>
     <div class="col">
       <div class="form-outline">
-        <input type="text" id="form3Example2" class="form-control" name="lastname"/>
-        <label class="form-label" for="form3Example2">{{LASTNAME}}</label>
+        <input type="text" id="form3Example2" class="form-control" name="lastname" value="{{LASTNAME}}"/>
+        <label class="form-label" for="form3Example2">LAST NAME</label>
       </div>
     </div>
   </div>
 
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" id="form3Example3" class="form-control" name="email"/>
-    <label class="form-label" for="form3Example3">{{EMAIL}}</label>
+    <input type="email" disabled id="form3Example3" class="form-control" name="email" value="{{EMAIL}}"/>
+    <label class="form-label" for="form3Example3">Email</label>
   </div>
 
   <!-- Password input -->
   <div class="form-outline mb-4">
-    <input type="password" id="form3Example4" class="form-control" name="password"/>
-    <label class="form-label" for="form3Example4">{{PASSWORD}}</label>
+    <input type="password" id="form3Example4" class="form-control" name="password" value="{{PASSWORD}}"/>
+    <label class="form-label" for="form3Example4">Password</label>
   </div>
 
  
@@ -36,6 +37,8 @@
   <button type="submit" class="btn btn-primary btn-block mb-4">Update</button>
 
 </form>
+  {{/each}}
+
 </div>
 
 
