--- a/template/views/update.hbs
+++ b/template/views/update.hbs
@@ -21,7 +21,7 @@
 
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" disabled id="form3Example3" class="form-control" name="email" value="{{EMAIL}}"/>
+    <input type="email" id="form3Example3" class="form-control" name="email" value="{{EMAIL}}"/>
     <label class="form-label" for="form3Example3">Email</label>
   </div>
 
